# Rusting

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  vercel.json  vite.config.js  vite.config.ts
.github/workflows/: oxidizer.yml  update-readme-on-deploy.yml
assets/DaySkyHDRI055A_1K/: DaySkyHDRI055A_1K.blend  DaySkyHDRI055A_1K.tres  DaySkyHDRI055A_1K.usdc  DaySkyHDRI055A_1K_HDR.exr
assets/Metal061A_4K-PNG/: Metal061A_4K-PNG.blend  Metal061A_4K-PNG.mtlx  Metal061A_4K-PNG.tres  Metal061A_4K-PNG.usdc  Metal061A_4K-PNG_Color.ktx2  Metal061A_4K-PNG_Displacement.ktx2  Metal061A_4K-PNG_Metalness.ktx2  Metal061A_4K-PNG_NormalGL.ktx2  Metal061A_4K-PNG_Roughness.ktx2
assets/Rust010_4K-PNG/: Rust010_4K-PNG.blend  Rust010_4K-PNG.mtlx  Rust010_4K-PNG.tres  Rust010_4K-PNG.usdc  Rust010_4K-PNG_AmbientOcclusion.ktx2  Rust010_4K-PNG_Color.ktx2  Rust010_4K-PNG_Displacement.ktx2  Rust010_4K-PNG_NormalGL.ktx2  Rust010_4K-PNG_Roughness.ktx2
frontend/: .gitignore  config.json  index.html  package-lock.json  package.json  style.css  test.html  vite.config.js
frontend/src/: debug-panel.js  info-panel.js  main.js  progression.js
self/: metal.metal
src/: App.jsx  App.tsx  index.css  main.rs  vite-env.d.ts
src/components/: DebugPanel.tsx  Effects.jsx  RustingMetal.jsx  RustingMetal.tsx
src/hooks/: useRustProgress.ts
src/shaders/: noise.js  rusting.frag  rusting.vert
src/utils/: dateCalculator.ts
