[package]
name = "rust_in_time"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

# 开发时快速编译
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# 发布时优化
[profile.release]
opt-level = 3
lto = "thin"
